--- a/Django_Blog/static/css/style.css
+++ b/Django_Blog/static/css/style.css
@@ -8,6 +8,8 @@ body {
 
     margin: 0;
     padding: 0;
+
+    display: flex;
 }
 
 
@@ -35,6 +37,8 @@ div.leftpannel {
 
     padding: 0;
     margin: 0 auto 0 0;
+
+    display: inline-block;
 }
 
 img.main_icon {
@@ -88,4 +92,22 @@ div.leftpannel>div.pannel_cont:hover, div.leftpannel>div.pannel_cont_b:hover {
     background-color: rgb(82, 82, 82);
     animation-name: mouse_hover_pannel_b;
     animation-duration: 0.3s;
+}
+
+
+/* Главная часть страницы */
+
+div.main {
+
+    margin: 10px 10px;
+    padding: 10px;
+    
+    background-color: rgb(32, 32, 32);
+
+    border-radius: 10px;
+    border-width: 0;
+
+    color: rgb(223, 223, 223);
+
+    display: inline-block;
 }
